2 nuevas clases para printer y modificacion Adapter del tck que fallaba